Some fixes on older tasks